# weather-mobile

./: Cargo.toml  LICENSE-MIT  PKGBUILD  README.md
extra/: Weather Mobile.desktop
src/: api.rs  main.rs  preferences.rs  rpc.rs  ui.rs
src/api/: location.rs  units.rs  weather.rs
src/ui/: alert.rs  daily.rs  hourly.rs
