[package]
name = "weather"
version = "0.1.0"
authors = ["Simon Willshire <me@simonwillshire.com>"]
edition = "2018"

[dependencies]
dirs = "3.0.1"
gtk = "0.9" 
glib = "0.10"
gio = "0.9"
http = "0.2"
flume = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.isahc]
version = "1.0"
features = ["json"]

