[package]
name = "weather-mobile"
version = "0.1.0"
authors = ["Simon Willshire <me@simonwillshire.com>"]
edition = "2018"

[dependencies]
dirs = "3.0.1"
http = "0.2"
flume = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.isahc]
version = "1.0"
features = ["json"]

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk4-rs"
branch = "master"
package = "gtk4"
features = []

[dependencies.time]
version = "0.2.25"
features = ["std"]
