[package]
name = "weather-mobile"
version = "0.1.0"
authors = ["Simon Willshire <me@simonwillshire.com>"]
edition = "2018"

[dependencies]
dirs = "3.0.1"
http = "0.2"
flume = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.gtk]
version = "0.3.1"
package = "gtk4"
features = []

[dependencies.isahc]
version = "1.0"
features = ["json"]

[dependencies.time]
version = "0.3.5"
features = ["std","local-offset","formatting"]
